--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title></title>
+    <title>微信视频号下载器</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
